--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
-	"name": "liz-project-4",
-	"description": "",
-	"main": "index.mjs",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack --config webpack_conf/webpack.prod.js",
-		"start": "node index.mjs",
-		"watch": "nodemon index.mjs"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/liztanyl/bootcamp-project-4.git"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@babel/core": "^7.12.10",
-		"@babel/preset-env": "^7.12.11",
-		"@babel/preset-react": "^7.12.10",
-		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-		"axios": "^0.21.4",
-		"babel-loader": "^8.2.2",
-		"css-loader": "^5.0.1",
-		"eslint": "^7.17.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-react": "^7.22.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"html-webpack-plugin": "^4.5.1",
-		"mini-css-extract-plugin": "^1.3.3",
-		"nodemon": "^2.0.7",
-		"react": "^18.0.0",
-		"react-dom": "^18.0.0",
-		"react-refresh": "^0.9.0",
-		"sass": "^1.32.2",
-		"sass-loader": "^10.1.0",
-		"sequelize-cli": "^6.2.0",
-		"webpack": "^5.11.1",
-		"webpack-cli": "^4.3.1",
-		"webpack-dev-middleware": "^4.0.2",
-		"webpack-dev-server": "^4.8.1",
-		"webpack-hot-middleware": "^2.25.0",
-		"webpack-merge": "^5.7.3"
-	},
-	"dependencies": {
-		"@emotion/react": "^11.9.0",
-		"@emotion/styled": "^11.8.1",
-		"@mui/icons-material": "^5.6.2",
-		"@mui/material": "^5.6.3",
-		"cookie-parser": "^1.4.5",
-		"express": "^4.17.1",
-		"jssha": "^3.2.0",
-		"node-cron": "^3.0.0",
-		"pg": "^8.5.1",
-		"regenerator-runtime": "^0.13.9",
-		"sequelize": "^6.3.5",
-		"validator": "^13.7.0"
-	}
+  "name": "liz-project-4",
+  "description": "",
+  "main": "index.mjs",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack_conf/webpack.prod.js",
+    "start": "node index.mjs",
+    "watch": "nodemon index.mjs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/liztanyl/bootcamp-project-4.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "axios": "^0.21.4",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "nodemon": "^2.0.7",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-refresh": "^0.10.0",
+    "sass": "^1.32.2",
+    "sass-loader": "^10.1.0",
+    "sequelize-cli": "^6.2.0",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-dev-server": "^4.8.1",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.3",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "jssha": "^3.2.0",
+    "moment": "^2.29.3",
+    "node-cron": "^3.0.0",
+    "pg": "^8.5.1",
+    "regenerator-runtime": "^0.13.9",
+    "sequelize": "^6.3.5",
+    "validator": "^13.7.0"
+  }
 }
